[package]
name = "tuplehorn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
combo_iter = { git = "https://github.com/sirkibsirkib/combo_iter.git" }
eq_graph = { git = "https://github.com/sirkibsirkib/eq_graph.git" }